Corrections page title and sub-menu alignmentato

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -192,7 +192,7 @@ a:hover {
 
 .Previous {
     background-color: forestgreen;
-    color: white;
+    color: red;
     border: 2px solid black;
     padding: 3px;
 }
